--- a/new/new2.html
+++ b/new/new2.html
@@ -41,7 +41,7 @@ body {
   display: block;
   color: blue;
   text-align: center;
-  padding: 8px 16px;
+  padding: 8px 14px;
   text-decoration: none;
   font-size: 17px;
 }
@@ -74,9 +74,9 @@ body {
 
 <!-- Services -->
   <div class="w3-container less header" id="services">
-    <p class="w3-large w3-twothird"><b>Nico Stephou</b></b>
-Graphic Designer / Art Director</p>
-      <h1 class="w3-small w3-twothird">I am a graphic designer working on identities, printed matter, digital projects and visual research. As an art director I have worked for multiple foundations, record labels and art projects. I have also co-founded the community platform and record label Honest Electronics and the yearly festival “The Gathering”.<br>
+    <h1 class="w3-small w3-third">Nico Stephou</h1>
+    <h1 class="w3-small w3-third">Graphic Designer / Art Director</h1>
+      <h1 class="w3-small w3-third">I am a graphic designer working on identities, printed matter, digital projects and visual research. As an art director I have worked for multiple foundations, record labels and art projects. I have also co-founded the community platform and record label Honest Electronics and the yearly festival “The Gathering”.<br>
  <br>In 2017 I have graduated from the Graphic Design Department of "Gerrit Rietveld Academie" in Amsterdam, Netherlands.</h1>
 
   </div>
@@ -84,15 +84,20 @@ Graphic Designer / Art Director</p>
 
 
 <div id="navbar" style="margin-top:0px">
-    <a href="#" onclick="w3_close()" class="w3-small ">About</a> 
-    <a href="#showcase" onclick="w3_close()" class="w3-small ">Design</a> 
+  <div class="w3-third"> 
+    <a href="#" onclick="w3_close()" class="w3-small ">Design</a> 
     <a href="#showcase" onclick="w3_close()" class="w3-small ">Sound</a> 
-        <a href="https://www.instagram.com/currenttribal/" target="_blank" onclick="w3_close()" class="w3-small">Tattoo</a> 
-    <br> 
+        <a href="https://www.instagram.com/currenttribal/" target="_blank" onclick="w3_close()" class="w3-small">Tattoo</a>
+        </div> 
+
+        <div class="w3-third"> 
     <a href="#" onclick="w3_close()" class="w3-small" style="color:blue">Projects:</a> 
     <a href="#ebb" onclick="w3_close()" class="w3-small ">EBB & FLOW</a>
     <a href="#orbital" onclick="w3_close()" class="w3-small ">Orbital</a> 
     <a href="#chakana" onclick="w3_close()" class="w3-small ">Chakana</a> 
+</div>
+
+    <div class="w3-third"> 
     <a href="#contact" onclick="w3_close()" class="w3-small">Contact</a>
   </div>
 
@@ -108,9 +113,13 @@ Graphic Designer / Art Director</p>
 
 
 <!-- Header -->
-  <div class="w3-container" style="margin-top:10px" id="showcase">
-    <h1 class="w3-large"><b>The Gathering III</h1>
-    <h1 class="w3-small w3-text-black"><b>Art Direction & Graphic Design</b></h1>
+  <div class="w3-container" style="margin-top:50px" id="showcase">
+
+    <h1 class="w3-large w3-third">Honest Electronics</h1>
+
+    <h1 class="w3-large w3-third"><b>The Gathering III</h1>
+
+    <h1 class="w3-small w3-text-white"><b>Art Direction & Graphic Design</b></h1>
     <h1 class="w3-small w3-third" >The Gathering is a yearly festival organised by Honest Electronics in order to promote local underground talent.</h1>
   </div>
   <br>
@@ -137,15 +146,23 @@ Graphic Designer / Art Director</p>
     </div>
   </div>
 
-<div class="w3-container less">
-
+  <div class="w3-container less">
+<br>
+<br>
+<br>
 </div>
- <div class="w3-container less" id="ebb" style="margin-top:65px;">
-    <h1 class="w3-large"><b>EBB & FLOW by Shammaes</b></h1>
-    <h1 class="w3-small"><b>Poster Design</b></h1>
 
-      <br>
-      <h1 class="w3-small w3-third" >Opening: Thursday, 5 July 2018, 19:00
+ <div class="w3-container less" id="ebb" style="margin-top:65px;">
+
+    <h1 class="w3-large w3-third">Thkio PPalies</h1>
+
+   <div class="w3-third w3-container less" style="margin:0px;">
+     <h1 class="w3-large">EBB & FLOW by Shammaes</h1>
+    <h1 class="w3-small">Poster Design</h1>
+  </div>
+
+       <dir class="w3-third w3-container less" style="margin:0px;">
+      <h1 class="w3-small" >Opening: Thursday, 5 July 2018, 19:00
 <br>Duration: 5-11 July
 <br>
 <br>up and down. 
@@ -160,6 +177,7 @@ Graphic Designer / Art Director</p>
 <br>
 <br>As time changes so do sounds and their convolution. The mechanical oscillation’s contact with soil is done at the expense of harmonicity and constancy. In some sense then, this form of oscillation resembles more and more to some other, more primordial ones; namely, that of a tide’s ebb and flow.</h1>
   </div>
+
 <br>
 <br>
 <br>
