--- a/new/new2.html
+++ b/new/new2.html
@@ -41,7 +41,7 @@ body {
   display: block;
   color: blue;
   text-align: center;
-  padding: 8px 14px;
+  padding: 8px 12px;
   text-decoration: none;
   font-size: 17px;
 }
@@ -91,7 +91,11 @@ body {
 
   </div>
 
-
+  <div class="w3-container less">
+<br>
+<br>
+<br>
+</div>
 
 
 <!-- NAVBAR -->
@@ -104,12 +108,13 @@ body {
         </div> 
 
         <div class="w3-twothird"> 
-    <a href="#" onclick="w3_close()" class="w3-small" style="color:blue">Clients:</a> 
+    <a href="#" onclick="w3_close()" class="w3-small" style="color:blue">Collaborators:</a> 
     <a href="#honest" onclick="w3_close()" class="w3-small ">Honest Electronics</a>
     <a href="#ppalies" onclick="w3_close()" class="w3-small ">Thkio Ppalies</a> 
     <a href="#chakana" onclick="w3_close()" class="w3-small ">Cyprus Artists Assosiation</a>
         <a href="#chakana" onclick="w3_close()" class="w3-small ">Ankali Club</a> 
             <a href="#chakana" onclick="w3_close()" class="w3-small ">MJMJ Records</a> 
+
         </div>
 </div>
 
@@ -177,42 +182,56 @@ body {
     <h1 class="w3-small w3-third" >The record label works as a stand alone company which aims at highlighting and promoting the works of our collective by offering services such as Industry & Technical Knowhow (sound engineering, mixing, mastering, promotion, production and distribution) and Art Direction (graphic design, artist profile, press package). While the social platform gives the collective the opportunity to perform and interact with a wider audience whether this be with live performances at label showcases or within a online network utilising the labels presence. </h1>
   </div>
   <br>
+
   <div>
+
     <div class="w3-quarter">
       <a href="https://honestelectronics.bandcamp.com/album/kyklophonon-ii-sessions-he10" target="_blank">
       <img src="images/honest/he10.jpg" style="width:100%">
     </div>
+
     <div class="w3-quarter">
       <a href="https://honestelectronics.bandcamp.com/album/helping-hand-he08" target="_blank">
       <img src="images/honest/he08.jpg" style="width:100%">
     </div>
+
         <div class="w3-quarter">
           <a href="https://honestelectronics.bandcamp.com/album/hawaiiprus-he04" target="_blank">
       <img src="images/honest/he04.jpg" style="width:100%">
     </div>
+
         <div class="w3-quarter">
           <a href="https://honestelectronics.bandcamp.com/album/mutual-ground-ii-he09" target="_blank">
       <img src="images/honest/he09.jpg" style="width:100%">
     </div>
-</div>
+
+ </div>
+
+
   <div>
+
     <div class="w3-quarter">
       <a href="https://honestelectronics.bandcamp.com/album/hawaiiprus-he04" target="_blank">
       <img src="images/honest/he03.jpg" style="width:100%">
     </div>
+
     <div class="w3-quarter">
       <a href="https://honestelectronics.bandcamp.com/album/dishonest-01-dis01" target="_blank">
       <img src="images/honest/dis1.jpg" style="width:100%">
     </div>
+
         <div class="w3-quarter">
           <a href="https://honestelectronics.bandcamp.com/album/motorik-he01" target="_blank">
       <img src="images/honest/he01.jpg" style="width:100%">
     </div>
+
         <div class="w3-quarter">
           <a href="https://honestelectronics.bandcamp.com/album/thanatos-he05" target="_blank">
       <img src="images/honest/he05.jpg" style="width:100%">
     </div>
+
 </div>
+
 
   <div class="w3-container less">
 <br>
@@ -220,11 +239,11 @@ body {
 <br>
 </div>
 
-<div class="w3-container" style="margin-top:50px" id="honest">
+<div class="w3-container">
 
     <h1 class="w3-large w3-third"></h1>
-    <h1 class="w3-large w3-third"><b>The Gathering II</h1>
-    <h1 class="w3-small w3-text-white"><b>Art Direction & Graphic Design</b></h1>
+    <h1 class="w3-large w3-third">The Gathering II</h1>
+    <h1 class="w3-small w3-text-white">Art Direction & Graphic Design</h1>
     <h1 class="w3-small w3-third" ></h1>
   </div>
   <br>
@@ -238,6 +257,8 @@ body {
     </div>
      
 </div>
+
+
 
   <div class="w3-container less">
 <br>
@@ -290,42 +311,56 @@ body {
 <div class="w3-container less">
 </div>
 
+
+  <div class="w3-container less">
+<br>
+<br>
+<br>
 </div>
- <div class="w3-container less" id="orbital" style="margin-top:65px;">
-    <h1 class="w3-large"><b>Orbital</b></h1>
-    <h1 class="w3-small"><b>Personal Multidisciplinary Performance</b></h1>
 
-      <br>
-      <h1 class="w3-small w3-third" > 
-“Orbital” is a multidisciplinary project in which I creates sounds out of shapes. By creating a family of symbols, I propose a language. These symbols are translated into records, one record for each. The combination of these symbols lead to sound-sentences. By playing four of them at the same time on a quadraphonic sound system, I create a sonic image of this graphical conversation.
 
-The performance at Thkio Ppalies will lasted for three hours. The crowd was able to walk in and out of the space at any time as the atmosphere was intended for meditation.
+<div class=" w3-third w3-container less header">
+      <h1 class="w3-small"> </h1>
+    </div>
 
-      </h1>
+    <div class="w3-third w3-container less">
+    <h1 class="w3-large">Orbital</h1>
+    <h1 class="w3-small">Personal Multidisciplinary Performance</h1>
+  </div>
+
+<div class=" w3-third w3-container less">
+      <h1 class="w3-small">“Orbital” is a multidisciplinary project in which I creates sounds out of shapes. By creating a family of symbols, I propose a language. These symbols are translated into records, one record for each. The combination of these symbols lead to sound-sentences. By playing four of them at the same time on a quadraphonic sound system, I create a sonic image of this graphical conversation.
+
+The performance at Thkio Ppalies will lasted for three hours. The crowd was able to walk in and out of the space at any time as the atmosphere was intended for meditation.</h1>
+</div>
+
+</div>
   </div>
 <br>
 <br>
 <br>
-    <div class="w3-twothird">
-      <img src="images/orbital/orbital-all.png" style="width:100%" onclick="onClick(this)">
+    <div class="w3-half">
+      <img src="images/orbital/orbital-all2.png" style="width:100%" onclick="onClick(this)">
  </div>
 
-<div class="w3-twothird">
+ <div class="w3-half">
+      <img src="images/orbital/orbital1.jpg" style="width:100%" onclick="onClick(this)">
+    </div>
+
+<div class="w3-half">
       <img src="images/orbital/orbital4.jpg" style="width:100%" onclick="onClick(this)">
 
     </div>
 
-<div class="w3-third">
+<div class="w3-half">
       <img src="images/orbital/orbital3.jpg" style="width:100%" onclick="onClick(this)">
     </div>
 
-<div class="w3-third">
+<div class="w3-half">
       <img src="images/orbital/orbital6.jpg" style="width:100%" onclick="onClick(this)">
     </div>
 
-<div class="w3-third">
-      <img src="images/orbital/orbital1.jpg" style="width:100%" onclick="onClick(this)">
-    </div>
+
 
 
 
