--- a/new/new2.html
+++ b/new/new2.html
@@ -186,23 +186,19 @@ body {
   <div>
 
     <div class="w3-quarter">
-      <a href="https://honestelectronics.bandcamp.com/album/kyklophonon-ii-sessions-he10" target="_blank">
-      <img src="images/honest/he10.jpg" style="width:100%">
+      <img src="images/honest/he10.jpg" style="width:100%" style="width:100%" onclick="onClick(this)">
     </div>
 
     <div class="w3-quarter">
-      <a href="https://honestelectronics.bandcamp.com/album/helping-hand-he08" target="_blank">
-      <img src="images/honest/he08.jpg" style="width:100%">
+      <img src="images/honest/he08.jpg" style="width:100%" style="width:100%" onclick="onClick(this)">
     </div>
 
         <div class="w3-quarter">
-          <a href="https://honestelectronics.bandcamp.com/album/hawaiiprus-he04" target="_blank">
-      <img src="images/honest/he04.jpg" style="width:100%">
+      <img src="images/honest/he04.jpg" style="width:100%" style="width:100%" onclick="onClick(this)">
     </div>
 
         <div class="w3-quarter">
-          <a href="https://honestelectronics.bandcamp.com/album/mutual-ground-ii-he09" target="_blank">
-      <img src="images/honest/he09.jpg" style="width:100%">
+      <img src="images/honest/he09.jpg" style="width:100%" style="width:100%" onclick="onClick(this)">
     </div>
 
  </div>
@@ -211,23 +207,19 @@ body {
   <div>
 
     <div class="w3-quarter">
-      <a href="https://honestelectronics.bandcamp.com/album/hawaiiprus-he04" target="_blank">
-      <img src="images/honest/he03.jpg" style="width:100%">
+      <img src="images/honest/he03.jpg" style="width:100%" style="width:100%" onclick="onClick(this)">
     </div>
 
     <div class="w3-quarter">
-      <a href="https://honestelectronics.bandcamp.com/album/dishonest-01-dis01" target="_blank">
-      <img src="images/honest/dis1.jpg" style="width:100%">
+      <img src="images/honest/dis1.jpg" style="width:100%" style="width:100%" onclick="onClick(this)">
     </div>
 
         <div class="w3-quarter">
-          <a href="https://honestelectronics.bandcamp.com/album/motorik-he01" target="_blank">
-      <img src="images/honest/he01.jpg" style="width:100%">
+      <img src="images/honest/he01.jpg" style="width:100%" style="width:100%" onclick="onClick(this)">
     </div>
 
         <div class="w3-quarter">
-          <a href="https://honestelectronics.bandcamp.com/album/thanatos-he05" target="_blank">
-      <img src="images/honest/he05.jpg" style="width:100%">
+      <img src="images/honest/he05.jpg" style="width:100%" style="width:100%" onclick="onClick(this)">
     </div>
 
 </div>
@@ -376,26 +368,36 @@ The performance at Thkio Ppalies will lasted for three hours. The crowd was able
 <br>
 </div>
 
- <div class="w3-container less" id="mo17" style="margin-top:65px;">
-    <h1 class="w3-large w3-text-black"><b>Modus Operandi 17</b></h1>
-    <h1 class="w3-small w3-text-black"><b>Graphic Design; Logo, 2 Publications & Website</b></h1>
+ <div class="w3-container less" id="ppalies" style="margin-top:65px;">
+
+    <h1 class="w3-large w3-third">Visual Artist Assosiation of Cyprus</h1>
+
+   <div class="w3-third w3-container less" style="margin:0px;">
+     <h1 class="w3-large">Modus Operandi 17</h1>
+    <h1 class="w3-small">Graphic Design; Logo, 2 Publications & Website</h1>
+              <img src="images/mo/mo.png" style="max-width: 100px">
+  </div>
 
       <br>
-      <h1 class="w3-medium w3-twothird" > 
-“Orbital” is a multidisciplinary project in which I creates sounds out of shapes. By creating a family of symbols, I propose a language. These symbols are translated into records, one record for each. The combination of these symbols lead to sound-sentences. By playing four of them at the same time on a quadraphonic sound system, I create a sonic image of this graphical conversation.
 
-The performance at Thkio Ppalies will lasted for three hours. The crowd was able to walk in and out of the space at any time as the atmosphere was intended for meditation.
+         <div class="w3-third w3-container less" style="margin:0px;">
+      <h1 class="w3-small">Modus Operandi 2017 (MO.17), deals with emerging artists under the age of 35, and during their early professional stage. It aims to present a matrix of practices, as well as their connections to local culture and the world, as they currently stand.</h1>
+</div>
 
-      </h1>
-
-
-  <div>
-<style>.embed-container { position: relative; padding-bottom:56.25%; height:0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%;}</style><div class='embed-container' data-page-width='452' data-page-height='640' id='ypembedcontainer' ><iframe   src="https://www.yumpu.com/en/embed/view/Ef8BQDgt463jaT0U" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe></div><script src='https://players.yumpu.com/modules/embed/yp_r_iframe.js' ></script>
-  </div>
+<div class="w3-container less">
+<br>
+<br>
+<br>
+</div>
 
     </div>
 <div class="w3-half">
-<iframe style="width:100%; height:500px;" src="//e.issuu.com/embed.html#3933776/63680022" frameborder="0" allowfullscreen></iframe>
+<iframe style="width:100%; height:800px;" src="//e.issuu.com/embed.html#3933776/63845119" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+      </div>
+<div class="w3-half">
+<iframe style="width:100%; height:800px;" src="//e.issuu.com/embed.html#3933776/63845137" frameborder="0" allowfullscreen></iframe>
   </div>
 
 
