--- a/new/new2.html
+++ b/new/new2.html
@@ -219,7 +219,7 @@ body {
     </div>
 
         <div class="w3-quarter">
-      <img src="images/honest/he05.jpg" style="width:100%" style="width:100%" onclick="onClick(this)">
+      <img src="images/honest/he05.jpg" style="width:100%" onclick="onClick(this)">
     </div>
 
 </div>
@@ -241,8 +241,7 @@ body {
   <br>
   <div>
     <div class="w3-third">
-      <a href="https://honestelectronics.bandcamp.com/album/kyklophonon-ii-sessions-he10" target="_blank">
-      <img src="images/honest/poster-ii.jpg" style="width:100%">
+      <img src="images/honest/poster-ii.jpg" style="width:100%" onclick="onClick(this)">
     </div>
     <div class="w3-twothird">
      <iframe style="width:100%; height:600px;" src="//e.issuu.com/embed.html#3933776/63843089" frameborder="0" allowfullscreen></iframe>
@@ -321,7 +320,7 @@ body {
   </div>
 
 <div class=" w3-third w3-container less">
-      <h1 class="w3-small">“Orbital” is a multidisciplinary project in which I creates sounds out of shapes. By creating a family of symbols, I propose a language. These symbols are translated into records, one record for each. The combination of these symbols lead to sound-sentences. By playing four of them at the same time on a quadraphonic sound system, I create a sonic image of this graphical conversation.
+      <h1 class="w3-small">“Orbital” is a multidisciplinary project in which I create sounds out of shapes. By creating a family of symbols, I propose a language. These symbols are translated into records, one record for each. The combination of these symbols lead to sound-sentences. By playing four of them at the same time on a quadraphonic sound system, I create a sonic image of this graphical conversation.
 
 The performance at Thkio Ppalies will lasted for three hours. The crowd was able to walk in and out of the space at any time as the atmosphere was intended for meditation.</h1>
 </div>
@@ -368,20 +367,25 @@ The performance at Thkio Ppalies will lasted for three hours. The crowd was able
 <br>
 </div>
 
+
+<!-- Visual Artists Assosiation -->
+
  <div class="w3-container less" id="ppalies" style="margin-top:65px;">
 
-    <h1 class="w3-large w3-third">Visual Artist Assosiation of Cyprus</h1>
+    <h1 class="w3-large w3-third">Visual Artist <br>Assosiation of Cyprus</h1>
 
    <div class="w3-third w3-container less" style="margin:0px;">
      <h1 class="w3-large">Modus Operandi 17</h1>
-    <h1 class="w3-small">Graphic Design; Logo, 2 Publications & Website</h1>
-              <img src="images/mo/mo.png" style="max-width: 100px">
+    <h1 class="w3-small">Graphic Design; <br> — Logo, <br> — 2 Publications<br> — Website</h1>
+    <br>
+              <img src="images/mo/mo.png" style="max-width: 200px">
+              <br>
   </div>
 
-      <br>
-
-         <div class="w3-third w3-container less" style="margin:0px;">
+         <div class="w3-third w3-container less">
       <h1 class="w3-small">Modus Operandi 2017 (MO.17), deals with emerging artists under the age of 35, and during their early professional stage. It aims to present a matrix of practices, as well as their connections to local culture and the world, as they currently stand.</h1>
+
+      <a href="http://momomo17.com/" target="_blank" style="w3-large">Visit Website</a>
 </div>
 
 <div class="w3-container less">
