--- a/new/new2.html
+++ b/new/new2.html
@@ -405,20 +405,33 @@ The performance at Thkio Ppalies will lasted for three hours. The crowd was able
   </div>
 
 
+<div class="w3-container less">
+<br>
+<br>
+<br>
+</div>
 
+<!-- Chakana -->
 
 <div class="w3-container less" id="chakana" style="margin-top:65px;">
-    <h1 class="w3-large w3-text-black"><b>Chakana</b></h1>
-        <h1 class="w3-small w3-text-black"><b>Zurich</b></h1>
-    <h1 class="w3-small w3-text-black"><b>Graphic Designer — 10 Events</b></h1>
 
-      <br>
+    <h1 class="w3-large w3-third">Chakana</h1>
 
-      <h1 class="w3-medium w3-twothird" >Opening: Thursday, 5 July 2018, 19:00</h1>
+   <div class="w3-third w3-container less" style="margin:0px;">
+     <h1 class="w3-large">10 Event Series 2017-18</h1>
+    <h1 class="w3-small">Graphic Design; <br> — Logo, <br> — 10 Posters</h1>
+    <br>
   </div>
+   <div class="w3-third w3-container less" style="margin:0px;">
+   <img src="images/chakana/chlogo.png" style="max-width: 100%">
+     <br>
+  </div>
+
+<div class="w3-container less">
 <br>
 <br>
 <br>
+</div>
 
 <div class="w3-third">
       <img src="images/chakana/familia.jpg" style="width:100%" onclick="onClick(this)">
