--- a/new/new2.html
+++ b/new/new2.html
@@ -83,10 +83,19 @@ body {
 
 
 <!-- HEADER -->
-  <div class="w3-container less header" id="services">
-    <h1 class="w3-small w3-third">Nico Stephou</h1>
-    <h1 class="w3-small w3-third">Graphic Designer / Art Director</h1>
-      <h1 class="w3-small w3-third">I am a graphic designer working on identities, printed matter, digital projects and visual research. As an art director I have worked for multiple foundations, record labels and art projects. I have also co-founded the community platform and record label Honest Electronics and the yearly festival “The Gathering”.<br>
+  <div class="w3-third w3-container less header" id="services">
+    <h1 class="w3-small">Nico Stephou</h1>
+</div>
+
+  <div class="w3-third w3-container less header" id="services">
+    <h1 class="w3-small">Graphic Designer / Art Director</h1>
+    <br>
+          <h1 class="w3-small" >+ 357 97686822</h1>
+      <h1 class="w3-small">nico.stephou@gmail.com</h1>
+    </div>
+
+     <div class="w3-third w3-container less header" id="services">
+      <h1 class="w3-small">I am a graphic designer working on identities, printed matter, digital projects and visual research. As an art director I have worked for multiple foundations, record labels and art projects. I have also co-founded the community platform and record label Honest Electronics and the yearly festival “The Gathering”.<br>
  <br>In 2017 I have graduated from the Graphic Design Department of "Gerrit Rietveld Academie" in Amsterdam, Netherlands.</h1>
 
   </div>
@@ -442,6 +451,36 @@ The performance at Thkio Ppalies will lasted for three hours. The crowd was able
 <div class="w3-third">
       <img src="images/chakana/ghost.jpg" style="width:100%" onclick="onClick(this)">
     </div>
+
+<div class="w3-row">
+    <div class="w3-col" style="width:16.6%">
+      <img src="images/chakana/taita.jpg" style="width:100%" onclick="onClick(this)">
+    </div>
+
+    <div class="w3-col" style="width:16.6%">
+      <img src="images/chakana/mama.jpg" style="width:100%" onclick="onClick(this)">
+    </div>
+
+    <div class="w3-col" style="width:16.6%">
+      <img src="images/chakana/flora.jpg" style="width:100%" onclick="onClick(this)">
+    </div>
+
+    <div class="w3-col" style="width:16.6%">
+      <img src="images/chakana/amazonia.jpg" style="width:100%" onclick="onClick(this)">
+    </div>
+
+    <div class="w3-col" style="width:16.6%">
+      <img src="images/chakana/aqua.jpg" style="width:100%" onclick="onClick(this)">
+    </div>
+
+    <div class="w3-col" style="width:16.6%">
+      <img src="images/chakana/fauna.jpg" style="width:100%" onclick="onClick(this)">
+    </div>
+
+
+
+</div>
+
 <div class="w3-container less">
 <br>
 <br>
@@ -452,19 +491,46 @@ The performance at Thkio Ppalies will lasted for three hours. The crowd was able
 </div>
 
 
+<div class="w3-container less" id="chakana" style="margin-top:65px;">
+
+    <h1 class="w3-large w3-third">MJMJ Records</h1>
+
+   <div class="w3-third w3-container less" style="margin:0px;">
+     <h1 class="w3-large">Record Label</h1>
+     <br>
+    <h1 class="w3-small">Graphic Design; <br> — Logo, <br> — Cassettes Designs 2015-17</h1>
+    <br>
+  </div>
+   <div class="w3-third w3-container less" style="margin:0px;">
+   <img src="images/mjlogo.png" style="max-width: 80%">
+     <br>
+  </div>
+
+<div class="w3-container less">
+<br>
+<br>
+<br>
+</div>
+
+<div class="w3-half">
+      <img src="images/ts1.jpg" style="width:100%" onclick="onClick(this)">
+    </div>
+<div class="w3-half">
+      <img src="images/ts2.jpg" style="width:100%" onclick="onClick(this)">
+    </div>
+
+
+
+
 <!-- Contact -->
   <div class="w3-container" id="contact" style="margin-top:65px;margin-right:350px">
-        <h1 class="w3-large" >Art Director</h1>
-      <h1 class="w3-large" >+ 357 97686822</h1>
-      <h1 class="w3-large">nico.stephou@gmail.com</h1>
+
+
 
 
 <!-- End page content -->
 </div>
 
-
-<!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
 
 
 <script>
