--- a/new/new2.html
+++ b/new/new2.html
@@ -39,7 +39,7 @@ body {
 #navbar a {
   float: left;
   display: block;
-  color: blue;
+  color: #f442e5;
   text-align: center;
   padding: 8px 12px;
   text-decoration: none;
@@ -87,14 +87,14 @@ body {
     <h1 class="w3-small">Nico Stephou</h1>
 </div>
 
-  <div class="w3-third w3-container less header" id="services">
+  <div class="w3-third w3-container less header">
     <h1 class="w3-small">Graphic Designer / Art Director</h1>
     <br>
           <h1 class="w3-small" >+ 357 97686822</h1>
       <h1 class="w3-small">nico.stephou@gmail.com</h1>
     </div>
 
-     <div class="w3-third w3-container less header" id="services">
+     <div class="w3-third w3-container less header">
       <h1 class="w3-small">I am a graphic designer working on identities, printed matter, digital projects and visual research. As an art director I have worked for multiple foundations, record labels and art projects. I have also co-founded the community platform and record label Honest Electronics and the yearly festival “The Gathering”.<br>
  <br>In 2017 I have graduated from the Graphic Design Department of "Gerrit Rietveld Academie" in Amsterdam, Netherlands.</h1>
 
@@ -121,7 +121,6 @@ body {
     <a href="#honest" onclick="w3_close()" class="w3-small ">Honest Electronics</a>
     <a href="#ppalies" onclick="w3_close()" class="w3-small ">Thkio Ppalies</a> 
     <a href="#chakana" onclick="w3_close()" class="w3-small ">Cyprus Artists Assosiation</a>
-        <a href="#chakana" onclick="w3_close()" class="w3-small ">Ankali Club</a> 
             <a href="#chakana" onclick="w3_close()" class="w3-small ">MJMJ Records</a> 
 
         </div>
@@ -131,16 +130,31 @@ body {
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:0px;margin-right:0px">
 
+  <div class="w3-container less">
+<br>
+<br>
+</div>
+
 
 <!-- Honest -->
-  <div class="w3-container" style="margin-top:50px" id="honest">
+  <div class="w3-third w3-container"id="honest">
+    <h1 class="w3-large">Honest Electronics</h1>
+</div>
 
-    <h1 class="w3-large w3-third">Honest Electronics</h1>
-    <h1 class="w3-large w3-third"><b>The Gathering III</h1>
-    <h1 class="w3-small w3-text-white"><b>Art Direction & Graphic Design</b></h1>
-    <h1 class="w3-small w3-third" >The Gathering is a yearly festival organised by Honest Electronics in order to promote local underground talent.</h1>
+  <div class="w3-third w3-container">
+    <h1 class="w3-large"><b>The Gathering III</h1>
+    <h1 class="w3-small"><b>Art Direction & Graphic Design</b></h1>
   </div>
-  <br>
+
+ <div class="w3-third w3-container">
+    <h1 class="w3-small" >The Gathering is a yearly festival organised by Honest Electronics in order to promote local underground talent.</h1>
+  </div>
+
+  <div class="w3-container less">
+<br>
+<br>
+</div>
+
   <div>
     <div class="w3-third">
       <img src="images/clusters.png" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
@@ -151,6 +165,7 @@ body {
         <div class="w3-third">
       <img src="images/artwork3.png" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
     </div>
+        </div>
 <div class="w3-container less">
 <br>
 </div>
@@ -238,6 +253,9 @@ body {
 <br>
 <br>
 <br>
+<br>
+<br>
+<br>
 </div>
 
 <div class="w3-container">
@@ -316,6 +334,9 @@ body {
 <br>
 <br>
 <br>
+<br>
+<br>
+<br>
 </div>
 
 
@@ -336,24 +357,27 @@ The performance at Thkio Ppalies will lasted for three hours. The crowd was able
 
 </div>
   </div>
+
+    <div class="w3-container less">
 <br>
 <br>
 <br>
+</div>
+
     <div class="w3-half">
       <img src="images/orbital/orbital-all2.png" style="width:100%" onclick="onClick(this)">
  </div>
 
  <div class="w3-half">
-      <img src="images/orbital/orbital1.jpg" style="width:100%" onclick="onClick(this)">
+      <img src="images/orbital/orbital3.jpg" style="width:100%" onclick="onClick(this)">
     </div>
 
 <div class="w3-half">
       <img src="images/orbital/orbital4.jpg" style="width:100%" onclick="onClick(this)">
-
     </div>
 
 <div class="w3-half">
-      <img src="images/orbital/orbital3.jpg" style="width:100%" onclick="onClick(this)">
+      <img src="images/orbital/orbital1.jpg" style="width:100%" onclick="onClick(this)">
     </div>
 
 <div class="w3-half">
@@ -482,8 +506,6 @@ The performance at Thkio Ppalies will lasted for three hours. The crowd was able
 </div>
 
 <div class="w3-container less">
-<br>
-<br>
 <br>
 <br>
 <br>
